# hello-wasm

./: README.md  cli.bat  env.bat  ide.bat
project/01-helloworld-wasmtime/: main.cpp
project/02-helloworld-web/: CMakeLists.txt  index.html  main.cpp
project/03-call-cpp-func/: CMakeLists.txt  func.cpp  http-server.bat  index.html
project/04-use-static-lib/: CMakeLists.txt  func.cpp  index.html  util.cpp
project/05-dll-dlopen/: CMakeLists.txt  func.cpp  index.html
project/06-dll-dynalib/: CMakeLists.txt  func.cpp  index.html  pre.js  util.cpp
project/07-hook-module/: CMakeLists.txt  CMakePresets.json  extern-pre.js  index.html  main.cpp  pre.js
project/08-modularize/: CMakeLists.txt  index.html  main.cpp
project/09-modularize-es6/: CMakeLists.txt  CMakePresets.json  index.html
project/10-instantiate/: CMakeLists.txt  index.html
project/11-compile-worker/: CMakeLists.txt  index.html  worker.js
project/12-monitor-dependencies/: CMakeLists.txt  data.txt  data2.txt  index.html  main.cpp
project/13-envvar/: CMakeLists.txt  index.html  main.cpp
project/14-nodejs/: CMakeLists.txt  main.cpp  main.mjs
project/15-preload-file/: 15_preload_file.js  CMakeLists.txt  cli.bat  ide.bat  index.html  main.cpp
project/16-awk/: CMakeLists.txt  CMakePresets.json  index.html
project/17-nodefs/: CMakeLists.txt  main.cpp  main.mjs
tool/: .gitignore  dir.lst
